--- a/apps/rt1.yml
+++ b/apps/rt1.yml
@@ -79,7 +79,7 @@
     - name: 'Install config.php fix'
       template:
         src: /opt/coreapps/apps/templates/rutorrent/rutorrent/settings/config.php
-        dest: /opt/appdata/{{pgrole}}/rutorrent/settings/config.php
+        dest: /opt/appdata/rutorrent/rutorrent/settings/config.php
         force: yes
         owner: '1000'
         group: '1000'
